# inconsistent-package-features

./: .gitignore  LICENSE  README.md  test_root_package.sh  test_virtual_workspace.sh
.github/workflows/: rust.yml
root-package/: Cargo.toml
root-package/crates/a/src/: lib.rs
root-package/crates/dep-b/: Cargo.toml
root-package/crates/dep-b-replacement/src/: lib.rs
root-package/crates/dep-b/src/: lib.rs
virtual-workspace/crates/a/: Cargo.toml
virtual-workspace/crates/dep-b-replacement/: Cargo.toml
virtual-workspace/crates/project/: Cargo.toml
virtual-workspace/crates/project/src/: main.rs
