[package]
name = "a"
version = "0.1.0"
authors = ["Skgland <bb-github@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dep-b = { path = "../dep-b", optional = true }
dep-b-replacement = { path = "../dep-b-replacement", optional = true }

[features]
replace-b = ["dep-b-replacement"]
default = ["dep-b"]
